loveable/frontend-deployment-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-staging
  namespace: default
  labels:
    app: frontend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-staging
  template:
    metadata:
      labels:
        app: frontend-staging
    spec:
      containers:
        - name: frontend
          image: ghcr.io/bennieking05/testifi-frontend:staging
          ports:
            - containerPort: 80
