loveable/frontend-deployment.staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/golden-cosmos-450417-i8/testifi-frontend:latest
          ports:
            - containerPort: 80
