loveable/frontend-service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-staging
  namespace: default
spec:
  selector:
    app: frontend-staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
